--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,30 +1,369 @@
-# This file configures the static analysis results for your project (errors,
-# warnings, and lints).
-#
-# This enables the 'recommended' set of lints from `package:lints`.
-# This set helps identify many issues that may lead to problems when running
-# or consuming Dart code, and enforces writing Dart using a single, idiomatic
-# style and format.
-#
-# If you want a smaller set of lints you can change this to specify
-# 'package:lints/core.yaml'. These are just the most critical lints
-# (the recommended set includes the core lints).
-# The core lints are also what is used by pub.dev for scoring packages.
-
 include: package:lints/recommended.yaml
 
-# Uncomment the following section to specify additional rules.
+analyzer:
+  exclude:
+    # Web
+    - "web/**"
+    # Build
+    - "build/**"
+    # Generated code
+    - "lib/**/*.g.dart"
+    - "lib/**/*.freezed.dart"
+    - "lib/generated_plugin_registrant.dart"
+    - "lib/generated/**"
+    # Assets
+    - "assets/**"
+    # Mocks for test
+    - "**/*.mocks.dart"
+    # Coverage
+    - "test/.test_coverage.dart"
 
-# linter:
-#   rules:
-#     - camel_case_types
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
 
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
+  errors:
+    # Info
+    always_declare_return_types: info
+    directives_ordering: info
+    todo: info
+    unsafe_html: info
 
-# For more information about the core and recommended set of lints, see
-# https://dart.dev/go/core-lints
+    # Warning
+    empty_catches: warning
+    no_logic_in_create_state: warning
+    prefer_relative_imports: warning
 
-# For additional information about configuring this file, see
-# https://dart.dev/guides/language/analysis-options
+    # Error
+    always_require_non_null_named_parameters: error
+    avoid_relative_lib_imports: error
+    avoid_slow_async_io: error
+    avoid_types_as_parameter_names: error
+    cancel_subscriptions: error
+    close_sinks: error
+    valid_regexps: error
+
+  plugins:
+    - dart_code_metrics
+
+dart_code_metrics:
+  anti-patterns:
+    - long-method
+    - long-parameter-list
+  metrics:
+    cyclomatic-complexity: 24
+    maximum-nesting-level: 5
+    number-of-parameters: 4
+    source-lines-of-code: 60
+  metrics-exclude:
+    - test/**
+  rules:
+    - avoid-nested-conditional-expressions:
+      acceptable-level: 2
+    - prefer-correct-identifier-length:
+        exceptions: ["i", "x", "sb"] # i for index, x for math operations, sb for StringBuffer.
+    - avoid-top-level-members-in-tests:
+        exclude:
+          - test/data/*.dart
+          - test/data/**/*.dart
+          - test/**/data.dart
+          - lib/**
+    - missing-test-assertion:
+        include-assertions:
+          - verify
+          - verifyZeroInteractions
+    - avoid-passing-async-when-sync-expected:
+        exclude:
+          - test/**
+    - avoid-redundant-async:
+        exclude:
+          - test/**
+    - prefer-static-class:
+        exclude:
+          - test/**
+          - lib/**/constants.dart
+          - integration_test/**
+
+    - always-remove-listener: true
+    - arguments-ordering: true
+    - avoid-banned-imports: true
+    - avoid-border-all: true
+    - avoid-cascade-after-if-null: true
+    - avoid-collection-methods-with-unrelated-types: true
+    - avoid-double-slash-imports: true
+    - avoid-duplicate-exports: true
+    - avoid-dynamic: true
+    - avoid-expanded-as-spacer: true
+    - avoid-global-state: true
+    - avoid-missing-enum-constant-in-map: true
+    - avoid-non-ascii-symbols: true
+    - avoid-non-null-assertion: true
+    - avoid-returning-widgets: true
+    - avoid-shrink-wrap-in-lists: true
+    - avoid-throw-in-catch-block: true
+    - avoid-unnecessary-conditionals: true
+    - avoid-unnecessary-setstate: true
+    - avoid-unnecessary-type-assertions: true
+    - avoid-unnecessary-type-casts: true
+    - avoid-unrelated-type-assertions: true
+    - avoid-unused-parameters: true
+    - avoid-wrapping-in-padding: true
+    - ban-name: true
+    - binary-expression-operand-order: true
+    - check-for-equals-in-render-object-setters: true
+    - consistent-update-render-object: true
+    - double-literal-format: true
+    - format-comment: true
+    - list-all-equatable-fields: true
+    - member-ordering: true
+    - newline-before-return: true
+    - no-boolean-literal-compare: true
+    - no-empty-block: true
+    - no-equal-then-else: true
+    - no-object-declaration: true
+    - prefer-async-await: true
+    - prefer-commenting-analyzer-ignores: true
+    - prefer-conditional-expressions: true
+    - prefer-const-border-radius: true
+    - prefer-correct-edge-insets-constructor: true
+    - prefer-correct-test-file-name: true
+    - prefer-correct-type-name: true
+    - prefer-enums-by-name: true
+    - prefer-extracting-callbacks: true
+    - prefer-first: true
+    - prefer-immediate-return: true
+    - prefer-intl-name: true
+    - prefer-iterable-of: true
+    - prefer-last: true
+    - prefer-match-file-name: true
+    - prefer-moving-to-variable: true
+    - prefer-single-widget-per-file: true
+    - prefer-trailing-comma: true
+    - prefer-using-list-view: true
+    - provide-correct-intl-args: true
+    - tag-name: true
+
+linter:
+  rules:
+    # Disabled
+    always_use_package_imports: false # against prefer_relative_imports
+    diagnostic_describe_all_properties: false # for Flutter Team only
+    flutter_style_todos: false # for Flutter Team only
+    prefer_double_quotes: false # against prefer_single_quotes
+    prefer_final_parameters: false # against avoid_final_parameters
+    unnecessary_final: false # against prefer_final_locals
+    always_specify_types: false # against omit_local_variable_types
+
+    # Enabled
+    always_put_control_body_on_new_line: true
+    always_put_required_named_parameters_first: true
+    avoid_annotating_with_dynamic: true
+    avoid_bool_literals_in_conditional_expressions: true
+    avoid_classes_with_only_static_members: true
+    avoid_double_and_int_checks: true
+    avoid_escaping_inner_quotes: true
+    avoid_field_initializers_in_const_classes: true
+    avoid_implementing_value_types: true
+    avoid_js_rounded_ints: true
+    avoid_print: true
+    avoid_redundant_argument_values: true
+    avoid_renaming_method_parameters: true
+    avoid_returning_null_for_future: true
+    avoid_returning_null_for_void: true
+    avoid_single_cascade_in_expression_statements: true
+    avoid_slow_async_io: true
+    avoid_types_on_closure_parameters: true
+    avoid_unnecessary_containers: true
+    avoid_unused_constructor_parameters: true
+    avoid_void_async: true
+    avoid_web_libraries_in_flutter: true
+    await_only_futures: true
+    cancel_subscriptions: true
+    cascade_invocations: true
+    close_sinks: true
+    comment_references: true
+    control_flow_in_finally: true
+    depend_on_referenced_packages: true
+    empty_statements: true
+    iterable_contains_unrelated_type: true
+    join_return_with_assignment: true
+    leading_newlines_in_multiline_strings: true
+    lines_longer_than_80_chars: true
+    list_remove_unrelated_type: true
+    literal_only_boolean_expressions: true
+    missing_whitespace_between_adjacent_strings: true
+    no_adjacent_strings_in_list: true
+    no_logic_in_create_state: true
+    no_runtimeType_toString: true
+    omit_local_variable_types: true
+    only_throw_errors: true
+    overridden_fields: true
+    package_names: true
+    package_prefixed_library_names: true
+    parameter_assignments: true
+    prefer_asserts_in_initializer_lists: true
+    prefer_asserts_with_message: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_declarations: true
+    prefer_const_literals_to_create_immutables: true
+    prefer_constructors_over_static_methods: true
+    prefer_expression_function_bodies: true
+    prefer_final_in_for_each: true
+    prefer_final_locals: true
+    prefer_foreach: true
+    prefer_if_elements_to_conditional_expressions: true
+    prefer_inlined_adds: true
+    prefer_int_literals: true
+    prefer_is_not_operator: true
+    prefer_null_aware_operators: true
+    prefer_typing_uninitialized_variables: true
+    prefer_void_to_null: true
+    provide_deprecation_message: true
+    public_member_api_docs: true
+    sized_box_for_whitespace: true
+    sort_child_properties_last: true
+    sort_constructors_first: true
+    sort_pub_dependencies: true
+    sort_unnamed_constructors_first: true
+    test_types_in_equals: true
+    throw_in_finally: true
+    unnecessary_await_in_return: true
+    unnecessary_null_aware_assignments: true
+    unnecessary_overrides: true
+    unnecessary_parenthesis: true
+    unnecessary_raw_strings: true
+    unnecessary_statements: true
+    unnecessary_string_escapes: true
+    unnecessary_string_interpolations: true
+    unsafe_html: true
+    use_full_hex_values_for_flutter_colors: true
+    use_raw_strings: true
+    use_string_buffers: true
+    valid_regexps: true
+    void_checks: true
+
+    # Pedantic 1.9.0
+    always_declare_return_types: true
+    always_require_non_null_named_parameters: true
+    annotate_overrides: true
+    avoid_empty_else: true
+    avoid_init_to_null: true
+    avoid_null_checks_in_equality_operators: true
+    avoid_relative_lib_imports: true
+    avoid_return_types_on_setters: true
+    avoid_shadowing_type_parameters: true
+    avoid_types_as_parameter_names: true
+    camel_case_extensions: true
+    curly_braces_in_flow_control_structures: true
+    empty_catches: true
+    empty_constructor_bodies: true
+    library_names: true
+    library_prefixes: true
+    no_duplicate_case_values: true
+    null_closures: true
+    prefer_adjacent_string_concatenation: true
+    prefer_collection_literals: true
+    prefer_conditional_assignment: true
+    prefer_contains: true
+    prefer_equal_for_default_values: true
+    prefer_final_fields: true
+    prefer_for_elements_to_map_fromIterable: true
+    prefer_generic_function_type_aliases: true
+    prefer_if_null_operators: true
+    prefer_is_empty: true
+    prefer_is_not_empty: true
+    prefer_iterable_whereType: true
+    prefer_single_quotes: true
+    prefer_spread_collections: true
+    recursive_getters: true
+    slash_for_doc_comments: true
+    type_init_formals: true
+    unawaited_futures: true
+    unnecessary_const: true
+    unnecessary_new: true
+    unnecessary_null_in_if_null_operators: true
+    unnecessary_this: true
+    unrelated_type_equality_checks: true
+    use_function_type_syntax_for_parameters: true
+    use_key_in_widget_constructors: true
+    use_rethrow_when_possible: true
+
+    # Effective Dart 1.2.0
+    avoid_catching_errors: true
+    avoid_equals_and_hash_code_on_mutable_classes: true
+    avoid_function_literals_in_foreach_calls: true
+    avoid_positional_boolean_parameters: true
+    avoid_private_typedef_functions: true
+    avoid_returning_null: true
+    avoid_returning_this: true
+    avoid_setters_without_getters: true
+    camel_case_types: true
+    constant_identifier_names: true
+    directives_ordering: true
+    file_names: true
+    hash_and_equals: true
+    implementation_imports: true
+    non_constant_identifier_names: true
+    one_member_abstracts: true
+    package_api_docs: true
+    prefer_function_declarations_over_variables: true
+    prefer_initializing_formals: true
+    prefer_interpolation_to_compose_strings: true
+    prefer_mixin: true
+    prefer_relative_imports: true
+    type_annotate_public_apis: true
+    unnecessary_brace_in_string_interps: true
+    unnecessary_getters_setters: true
+    unnecessary_lambdas: true
+    use_setters_to_change_properties: true
+    use_to_and_as_if_applicable: true
+
+    # Linter 1.11.0
+    avoid_dynamic_calls: true
+    avoid_multiple_declarations_per_line: true
+    avoid_type_to_string: true
+    cast_nullable_to_non_nullable: true
+    deprecated_consistency: true
+    do_not_use_environment: true
+    eol_at_end_of_file: true
+    exhaustive_cases: true
+    no_default_cases: true
+    noop_primitive_operations: true
+    null_check_on_nullable_type_parameter: true
+    prefer_null_aware_method_calls: true
+    require_trailing_commas: true
+    tighten_type_of_initializing_formals: true
+    unnecessary_constructor_name: true
+    unnecessary_null_checks: true
+    unnecessary_nullable_for_final_variable_declarations: true
+    use_build_context_synchronously: true
+    use_if_null_to_convert_nulls_to_bools: true
+    use_is_even_rather_than_modulo: true
+    use_named_constants: true
+    use_test_throws_matchers: true
+
+    # Linter 1.15.0+
+    avoid_final_parameters: true
+    combinators_ordering: true
+    conditional_uri_does_not_exist: true
+    discarded_futures: true
+    no_leading_underscores_for_library_prefixes: true
+    no_leading_underscores_for_local_identifiers: true
+    secure_pubspec_urls: true
+    sized_box_shrink_expand: true
+    unnecessary_late: true
+    unnecessary_null_aware_operator_on_extension_on_nullable: true
+    unnecessary_to_list_in_spreads: true
+    unreachable_from_main: true
+    use_decorated_box: true
+    use_late_for_private_fields_and_variables: true
+    use_string_in_part_of_directives: true
+
+    # Linter 1.30.0+
+    collection_methods_unrelated_type: true
+    dangling_library_doc_comments: true
+    enable_null_safety: true
+    implicit_call_tearoffs: true
+    library_annotations: true
+    unnecessary_library_directive: true
