--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,10 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
 dev_dependencies:
+  build_runner: ^2.3.3 # From Google
   dart_code_metrics: ^5.3.0 # Flutter Favorite
   lints: ^2.0.1 # From Google
-  test: ^1.22.0 # From Google
+  test: ^1.22.1 # From Google
