--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: functional_status_codes
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# homepage: https://www.example.com
+maintainer: Roman Cinis
+repository: https://github.com/tsinis/functional_status_codes
+issue_tracker: https://github.com/tsinis/functional_status_codes/issues
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
