--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -230,7 +230,7 @@ linter:
     prefer_typing_uninitialized_variables: true
     prefer_void_to_null: true
     provide_deprecation_message: true
-    public_member_api_docs: false # TODO! Set to true before publishing! <--
+    public_member_api_docs: true
     sort_constructors_first: true
     sort_pub_dependencies: true
     sort_unnamed_constructors_first: true
