--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,10 +7,7 @@ analyzer:
     # Build
     - "build/**"
     # Generated code
-    - "lib/**/*.g.dart"
-    - "lib/**/*.freezed.dart"
-    - "lib/generated_plugin_registrant.dart"
-    - "lib/generated/**"
+    # - "lib/**/*.g.dart"
     # Assets
     - "assets/**"
     # Mocks for test
