--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: functional_status_codes
-description: A starting point for Dart libraries or applications.
+description: This package offers a functional approach to handling HTTP status codes.
 version: 1.0.0
 maintainer: Roman Cinis
 repository: https://github.com/tsinis/functional_status_codes
