ci: enable dcm in actions and bump its version

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -78,7 +78,6 @@ dart_code_metrics:
         exclude:
           - test/**
           - lib/**/constants.dart
-          - integration_test/**
 
     - arguments-ordering: true
     - avoid-banned-imports: true
@@ -140,6 +139,7 @@ dart_code_metrics:
     - prefer-single-widget-per-file: false
     - prefer-using-list-view: false
     - provide-correct-intl-args: false
+    - use-setstate-synchronously: false
 
 linter:
   rules:
