--- a/.github/workflows/analyze.yaml
+++ b/.github/workflows/analyze.yaml
@@ -41,14 +41,13 @@ jobs:
       - name: Analyze
         run: dart analyze --fatal-infos --fatal-warnings .
 
-      # TODO! Until DCM action fix.
-      # - name: Dart Code Metrics
-      #   uses: dart-code-checker/dart-code-metrics-action@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     folders: "lib, test, example"
-      #     pull_request_comment: true
-      #     check_unused_files: true
-      #     fatal_performance: true
-      #     fatal_warnings: true
-      #     fatal_style: true
+      - name: Dart Code Metrics
+        uses: dart-code-checker/dart-code-metrics-action@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          folders: "lib, test, example"
+          pull_request_comment: true
+          check_unused_files: true
+          fatal_performance: true
+          fatal_warnings: true
+          fatal_style: true
