chore(deps): bump deps versions and update workflows

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,8 @@ name: tests
 
 on:
   push:
+    branches:
+      - main
     paths:
       - "lib/**"
       - "test/**"
@@ -36,7 +38,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          dart pub global activate coverage 1.2.0
+          dart pub global activate coverage 1.6.2
           dart test --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
       - name: Check Code Coverage
