--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -16,10 +16,21 @@ updates:
 
   # Maintain dependencies for Dart
   - package-ecosystem: "pub"
-    versioning-strategy: increase
     directory: "/"
     schedule:
       interval: "daily"
+    assignees:
+      - "dependabot"
+    reviewers:
+      - "tsinis"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
+
+  - package-ecosystem: "pub"
+    directory: "example/"
+    schedule:
+      interval: "weekly"
     assignees:
       - "dependabot"
     reviewers:
