--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: functional_status_codes
 description: This package offers a functional approach to handling HTTP status codes.
-version: 1.0.3
+version: 1.0.4
 maintainer: Roman Cinis
 repository: https://github.com/tsinis/functional_status_codes
 issue_tracker: https://github.com/tsinis/functional_status_codes/issues
@@ -10,6 +10,10 @@ environment:
 
 dev_dependencies:
   build_runner: ^2.3.3 # From Google
-  dart_code_metrics: ^5.4.0 # Flutter Favorite
+  dart_code_metrics: ^5.5.0 # Flutter Favorite
   lints: ^2.0.1 # From Google
   test: ^1.22.2 # From Google
+
+screenshots:
+  - description: 'Good/Bad Comparison'
+    path: doc/comparison.png
