fix(ci): added branches for pull_requests workflow

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -2,10 +2,9 @@ name: pull_requests
 
 on:
   pull_request:
-    types:
-      - opened
-      - reopened
-      - edited
+    branches:
+      - main
+
 
 permissions:
   pull-requests: write
