--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,15 +1,6 @@
 name: tests
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "lib/**"
-      - "test/**"
-      - "example/**"
-      - "pubspec.yaml"
-      - ".github/workflows/test.yaml"
   pull_request:
     branches:
       - main
@@ -51,3 +42,5 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage/lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          override_branch: ${{ github.base_ref }}
