--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,4 +16,4 @@ dev_dependencies:
 
 screenshots:
   - description: 'Good/Bad Comparison'
-    path: doc/comparison.png
+    path: doc/comparison.webp
