--- a/.github/workflows/analyze.yaml
+++ b/.github/workflows/analyze.yaml
@@ -45,6 +45,9 @@ jobs:
           fail-on: 'format'
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install WebP Utilities
+        run: sudo apt-get install -y webp
+
       - name: Calculate PANA Score
         uses: axel-op/dart-package-analyzer@v3
         id: analysis
