--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dev_dependencies:
   build_runner: ^2.3.3 # From Google
   dart_code_metrics: ^5.6.0 # Flutter Favorite
   lints: ^2.0.1 # From Google
+  pana: ^0.21.26 # From Google
   test: ^1.23.1 # From Google
 
 screenshots:
