--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,21 +27,27 @@ jobs:
           file: "pubspec.yaml"
           key-path: '["version"]'
 
+      - name: Show detected tag and version
+        run: |
+          echo "Tag from github ref.: ${{ env.TAG }}!"
+          echo "Version from pubspec: ${{ steps.pubspec.outputs.data }}!"
+
       - name: Delete tag if version is not same as tag
         uses: dev-drprasad/delete-tag-and-release@v0.2.0
-        if: steps.pubspec.outputs.data != env.TAG
+        if: ${{ steps.pubspec.outputs.data != env.TAG }}
         with:
-          tag_name: env.TAG
+          tag_name: ${{ env.TAG }}
           delete_release: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cancel workflow if tag is not same as version
         uses: andymckay/cancel-action@0.3
-        if: steps.pubspec.outputs.data != env.TAG
+        if: ${{ steps.pubspec.outputs.data != env.TAG }}
 
-      - name: Say Goodbye :)
-        run: echo "Ready to publish, goodbye!"
+      - name: Sleep for 10 seconds
+        run: sleep 10s
+        shell: bash
 
   publish:
     name: Publish to pub.dev
