--- a/.github/workflows/analyze.yaml
+++ b/.github/workflows/analyze.yaml
@@ -21,6 +21,14 @@ jobs:
       - name: Checks-out repository
         uses: actions/checkout@v3
 
+      - name: Link Checker
+        uses: lycheeverse/lychee-action@v1.5.4
+        with:
+          args: --verbose --no-progress './**/*.md' './**/*.html'
+          format: markdown
+          jobSummary: true
+          fail: true
+
       - name: Check spelling
         uses: check-spelling/check-spelling@v0.0.21
         with:
