--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -63,5 +63,5 @@ jobs:
   publish:
     name: Publish to pub.dev
     needs: check-version
-    if: ${{ github.repository_owner == 'tsinis' && github.actor == 'tsinis' }}
+    if: ${{ github.repository_owner == 'tsinis' && github.actor == 'tsinis' && github.ref_type == 'tag' }}
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
