--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,7 +17,7 @@ jobs:
     name: Publish dry run
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.ref_type == 'branch'
+    if: github.ref_type == 'branch' && github.event_name == 'pull_request' && !github.event.pull_request.merged
     steps:
       - name: Checks-out repository
         uses: actions/checkout@v3
