--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,8 +38,9 @@ jobs:
 
       - name: Run Tests
         run: |
-          dart pub global activate coverage 1.6.2
-          dart test --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+          dart pub global activate coverage
+          dart test --coverage=coverage
+          dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v2.1.0
