--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,24 @@
-version: 1.0.6
+version: 1.1.0
 name: functional_status_codes
 description: This package offers a functional approach to handling HTTP status codes.
 maintainer: Roman Cinis
 repository: https://github.com/tsinis/functional_status_codes
 issue_tracker: https://github.com/tsinis/functional_status_codes/issues
+topics:
+ - status-codes
+ - status-code
+ - http
+ - https
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
 dev_dependencies:
   build_runner: ^2.3.3 # From Google
-  dart_code_metrics: ^5.6.0 # Flutter Favorite
+  dart_code_metrics: ^5.7.3 # Flutter Favorite
   lints: ^2.0.1 # From Google
-  pana: ^0.21.26 # From Google
-  test: ^1.23.1 # From Google
+  pana: ^0.21.31 # From Google
+  test: ^1.24.2 # From Google
 
 screenshots:
   - description: 'Good/Bad Comparison'
