--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,9 +15,10 @@ analyzer:
     # Coverage
     - "test/.test_coverage.dart"
 
-  strong-mode:
-    implicit-casts: false
-    implicit-dynamic: false
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
 
   errors:
     # Info
@@ -90,6 +91,7 @@ dart_code_metrics:
     - avoid-missing-enum-constant-in-map: true
     - avoid-non-ascii-symbols: true
     - avoid-non-null-assertion: true
+    - avoid-substring: true
     - avoid-throw-in-catch-block: true
     - avoid-unnecessary-conditionals: true
     - avoid-unnecessary-type-assertions: true
@@ -270,7 +272,6 @@ linter:
     prefer_collection_literals: true
     prefer_conditional_assignment: true
     prefer_contains: true
-    prefer_equal_for_default_values: true
     prefer_final_fields: true
     prefer_for_elements_to_map_fromIterable: true
     prefer_generic_function_type_aliases: true
