--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-version: 1.1.0
+version: 1.2.0
 name: functional_status_codes
 description: This package offers a functional approach to handling HTTP status codes.
 maintainer: Roman Cinis
@@ -9,16 +9,18 @@ topics:
  - status-code
  - http
  - https
+ - iana
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
 
 dev_dependencies:
-  build_runner: ^2.3.3 # From Google
-  dart_code_metrics: ^5.7.3 # Flutter Favorite
-  lints: ^2.0.1 # From Google
-  pana: ^0.21.31 # From Google
-  test: ^1.24.2 # From Google
+  build_runner: ^2.4.6 # From Google
+  coverage: ^1.6.3 # From Google
+  dart_code_metrics: ^5.7.6 # Flutter Favorite
+  lints: ^2.1.1 # From Google
+  pana: ^0.21.32 # From Google
+  test: ^1.24.6 # From Google
 
 screenshots:
   - description: 'Good/Bad Comparison'
