feat: added 19 common unofficial status codes (#29)
* feat: added 28 new codes with new is an official flag: false

* fix(ci): add proper version for codecov-action

* feat: update functional methods and getters

* refactor: remove duplicated unofficial status codes

* style: rename 524 and 526 codes enum values

* chore(deps): update example dependencies

* docs: updated readme and changelog for v2.0.0

* fix(ci): update spell-check excludes

* refactor(ci): use full versions in action references

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,10 +28,10 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Checks-out repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.0.0
 
       - name: Setup Dart
-        uses: dart-lang/setup-dart@v1
+        uses: dart-lang/setup-dart@v1.5.1
 
       - name: Install Dependencies
         run: dart pub get
@@ -48,7 +48,7 @@ jobs:
           exclude: "**/*.g.dart"
 
       - name: Upload Code Coverage
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v4.0.0-beta.2
         with:
           file: ./coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
