--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-version: 2.0.0
+version: 2.1.0
 name: functional_status_codes
 description: This package offers a functional approach to handling HTTP status codes.
 maintainer: Roman Cinis
@@ -12,15 +12,17 @@ topics:
  - iana
 
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: ^2.17.0
 
 dev_dependencies:
-  build_runner: ^2.4.6 # From Google
-  coverage: ^1.6.3 # From Google
-  dart_code_metrics: ^5.7.6 # Flutter Favorite
-  lints: ^2.1.1 # From Google
-  pana: ^0.21.32 # From Google
-  test: ^1.24.6 # From Google
+  build_runner: ^2.4.8 # From Google
+  coverage: ^1.7.2 # From Google
+  dart_code_metrics: # Flutter Favorite
+    git:
+      url: https://github.com/tsinis/dart-code-metrics
+  lints: ^3.0.0 # From Google
+  pana: ^0.21.45 # From Google
+  test: ^1.25.2 # From Google
 
 screenshots:
   - description: 'Good/Bad Comparison'
