--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,10 +23,10 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Setup Dart
-        uses: dart-lang/setup-dart@v1.5.1
+        uses: dart-lang/setup-dart@v1.6.0
 
       - name: Install Dependencies
-        run: dart pub get
+        run: dart pub get --no-example
 
       - name: Publish - dry run
         run: dart pub publish --dry-run
