--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,9 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Setup Dart
-        uses: dart-lang/setup-dart@v1.5.1
+        uses: dart-lang/setup-dart@v1.6.0
+        with:
+            sdk: '2.17.0'
 
       - name: Install Dependencies
         run: dart pub get
@@ -44,11 +46,11 @@ jobs:
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v2.2.0
         with:
-          min_coverage: 96
+          min_coverage: 95
           exclude: "**/*.g.dart"
 
       - name: Upload Code Coverage
-        uses: codecov/codecov-action@v4.0.0-beta.2
+        uses: codecov/codecov-action@v4.0.0-beta.3
         with:
           file: ./coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
