--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,12 @@ environment:
   sdk: ^2.17.0
 
 dev_dependencies:
-  build_runner: ^2.3.0 # From Google
-  coverage: ^1.6.3 # From Google
-  dart_code_metrics: ^4.19.1 # Flutter Favorite
-  lints: ^2.0.1 # From Google
-  pana: ^0.21.17 # From Google
-  test: ^1.21.4 # From Google
+  build_runner: any # From Google
+  coverage: any # From Google
+  dart_code_metrics: any # Flutter Favorite
+  lints: any # From Google
+  pana: any # From Google
+  test: any # From Google
 
 screenshots:
   - description: 'Good/Bad Comparison'
