fix(ci): emove --fail-fast flag from test workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          dart test --fail-fast --coverage=coverage
+          dart test --coverage=coverage
           dart run coverage:format_coverage -l -i coverage -o coverage/lcov.info --report-on=lib
 
       - name: Check Code Coverage
