--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-version: 2.3.0
+version: 3.0.0
 name: functional_status_codes
 description: This package offers a functional approach to handling HTTP status codes.
 maintainer: Roman Cinis
@@ -12,15 +12,14 @@ topics:
  - iana
 
 environment:
-  sdk: ^2.17.0
+  sdk: ^3.9.0
 
 dev_dependencies:
-  build_runner: any # From Google
-  coverage: any # From Google
-  dart_code_metrics: any # Flutter Favorite
-  lints: any # From Google
-  pana: any # From Google
-  test: any # From Google
+  coverage: ^1.15.0 # From Google.
+  dart_code_metrics_presets: ^2.26.1 # DCM.
+  lints: ^6.0.0 # From Google.
+  pana: ^0.22.24 # From Google.
+  test: ^1.26.3 # From Google.
 
 screenshots:
   - description: 'Good/Bad Comparison'
