test: add tests for status code extension

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -78,8 +78,7 @@
     {
       "type": "shell",
       "command": "genhtml coverage/lcov.info -o coverage/ --dark-mode --ignore-errors range",
-      "label": "Generate Coverage",
-      "presentation": { "close": true }
+      "label": "Generate Coverage"
     },
     {
       "type": "shell",
