--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,10 @@ maintainer: Roman Cinis
 repository: https://github.com/tsinis/functional_status_codes
 issue_tracker: https://github.com/tsinis/functional_status_codes/issues
 topics:
+ - http-status-code
  - status-codes
  - status-code
  - http
- - https
  - iana
 
 environment:
